fix Minima theme problem?

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ news-enabled: true
 # ================================
 # Appearance
 # ================================
+theme: minima
 theme-color: default
 font-combo: default
 
