--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author: Civic Tools
 # ================================
 logo-image-enabled: true
 
-social-links-enabled: false
+social-links-enabled: true
 
 sharing-enabled: false
 
